--- a/src/global.css
+++ b/src/global.css
@@ -1,10 +1,10 @@
 *, *::before, *::after{
   padding: 0;
   margin: 0;
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 html, body {
-  height: 100%;
+  height: 100vh;
   font-size: 62.5%;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -21,16 +21,21 @@ html, body {
 
 @media only screen and (max-width: 75em) {
   html {
-    font-size: 56.25%; } }
+    font-size: 56.25%; } 
+}
 @media only screen and (max-width: 56.25em) {
   html {
-    font-size: 50%; } }
+    font-size: 50%; } 
+}
 @media only screen and (max-width: 37.5em) {
   html {
-    font-size: 40%; } }
+    font-size: 40%; } 
+}
 @media only screen and (max-width: 20.7em) {
   html {
-    font-size: 35%; } }
+    font-size: 35%; } 
+}
 @media only screen and (max-width: 18rem) {
   html {
-    font-size: 30%; } }
+    font-size: 30%; } 
+}
