--- a/src/global.css
+++ b/src/global.css
@@ -21,12 +21,24 @@ html, body {
 
 @media only screen and (max-width: 75em) {
   html {
-    font-size: 56.25%; } 
+    font-size: 56.25%; 
+  } 
 }
+@media only screen and (max-height: 60em){
+  html {
+    font-size: 55%; } 
+}
+
 @media only screen and (max-width: 56.25em) {
   html {
     font-size: 50%; } 
 }
+
+@media only screen and (max-height: 50em){
+  html {
+    font-size: 45%; } 
+}
+
 @media only screen and (max-width: 37.5em) {
   html {
     font-size: 40%; } 
