--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 html, body {
-  height: 100vh;
+  /* height: 100vh; */
+  background-color: #AAA;
   font-size: 62.5%;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
